--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,16 @@
 #####################################################
 *.sketch
 *.fig
+.dist
+.node_modules
+.vscode
 
 # Avoid accidental XD upload if you convert the design file
 ###############################################
 ## Please do not remove line 12 - thanks! 🙂 ##
 ###############################################
 *.xd
+.gitignore
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
